# oCAML-pROJECT

expression/: dune-project  main.ml  parseme.txt  parseme2.txt  parseme3.txt
expression/_build/: log
expression/_build/default/: expression.install
expression/_build/default/lib/: ast.ml  expression.cma  expression.cmxa  expression.cmxs  expression__.ml-gen  lexer.ml  lexer.mll  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred
expression/_build/install/default/lib/expression/: dune-package
expression/lib/: ast.ml  dune  expression.ml  lexer.mll  parser.mly
expression/test/: dune
